--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-/*
-    $color1: rgba(229,166,142,1);
-    $color2: rgba(229,153,170,1);
-    $color3: rgba(214,126,192,1);
-    $color4: rgba(156,98,188,1);
-    $color5: rgba(20,11,145,1);
-*/
 
 :root {
     --color1: rgba( 43, 76,111,1);
@@ -12,6 +5,7 @@
     --color3: rgba( 85,117,149,1);
     --color4: rgba( 14, 43, 72,1);
     --color-title: rgba(  2, 18, 34,1);
+    --color5: rgba(60, 49, 118,1);
 
 }
 
@@ -23,11 +17,11 @@ html {
     background-size: cover;
     background: var(--color-bg);
     background-repeat:no-repeat;
-    background: -webkit-linear-gradient( to bottom right, var(--color-bg), var(--color1));
-    background: -moz-linear-gradient( to bottom right, var(--color-bg), var(--color1));
-    background: -ms-linear-gradient( to bottom right, var(--color-bg), var(--color1));
-    background: -o-linear-gradient( to bottom right, var(--color-bg), var(--color1));
-    background: linear-gradient( to bottom right, var(--color-bg), var(--color1));
+    background: -webkit-linear-gradient( to bottom right, var(--color-bg), var(--color1), var(--color5));
+    background: -moz-linear-gradient( to bottom right, var(--color-bg), var(--color1), var(--color5));
+    background: -ms-linear-gradient( to bottom right, var(--color-bg), var(--color1), var(--color5));
+    background: -o-linear-gradient( to bottom right, var(--color-bg), var(--color1), var(--color5));
+    background: linear-gradient( to bottom right, var(--color-bg), var(--color1), var(--color5));
 }
 
 body {
@@ -37,4 +31,15 @@ body {
 
 h1 {
     color: var(--color-title);
+}
+
+.pane {
+    height: 500px;
+    opacity: 0.4;
+    padding-left: 200px;
+    background: -webkit-linear-gradient( to top right, lightgrey, grey);
+    background: -moz-linear-gradient( to top right, lightgrey, grey);
+    background: -ms-linear-gradient( to top right, lightgrey, grey);
+    background: -o-linear-gradient( to top right, lightgrey, grey);
+    background: linear-gradient( to top right, lightgrey, grey);
 }
