--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
     --color-bg: rgba(153,176,201,1);
     --color3: rgba( 85,117,149,1);
     --color4: rgba( 14, 43, 72,1);
-    --color-title: rgba(  2, 18, 34,1);
+    --color-title: rgba( 2, 18, 34,1);
     --color5: rgba(60, 49, 118,1);
 
 }
@@ -28,8 +28,15 @@ body {
     font-family: "Lato", sans-serif;
 }
 
-h1 {
+h1, h2, h3, span {
     color: var(--color-title);
+}
+
+hr {
+    height: 1px;
+    color: var(--color-title);
+    background-color: var(--color-title);
+    border: none;
 }
 
 /* This is the class for the side navigation menu */
@@ -63,7 +70,7 @@ h1 {
 }
 
 /* This is the class for the button to close the menu */
-.sidenav .closebtn {
+.sidenav .closeNavButton {
     position: absolute;
     top: 0;
     right: 25px;
