--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,31 @@ hr {
     border: none;
 }
 
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+button {
+    background-color: var(--color4);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: var(--color3);
+    cursor: pointer;
+}
+
 /* This is the class for the side navigation menu */
 .sidenav {
     height: 100%;
